@@ -26,17 +26,16 @@
 
   <!-- Firefox Euskalbar toolbar -->
   <toolbox id="navigator-toolbox">
-    <toolbar id="EuskalBar-Toolbar" accesskey="K" class="chromeclass-toolbar"
-           context="toolbar-context-menu" toolbarname="Euskalbar"
+    <toolbar id="EuskalBar-Toolbar" accesskey="K" class="chromeclass-toolbar" toolbarname="Euskalbar" context="Euskalbar-hsButtons"
            hidden="false" persist="hidden">
       <toolbarbutton id="euskalbar-button" tooltiptext="&euskalbar.help.tooltip;" oncommand="openLaguntza();"/>
       <toolbarseparator/>
       <toolbarbutton id="EuskalBar-aukerak" label="&euskalbar.options.tooltip;" type="menu">
         <menupopup id="EuskalBar-aukerak-popup">
-          <menuitem id="hideshowmenu" label=" " tooltiptext="&euskalbar.prefs.uppermenu.tooltip;" onclick="showhideDicts();"/>
+          <menuitem id="hideshowmenu" label=" " tooltiptext="&euskalbar.prefs.uppermenu.tooltip;" oncommand="showhideDicts();"/>
           <menuitem id="optionsdialog" label="&euskalbar.prefs.options.label;" tooltiptext="&euskalbar.prefs.options.label;" oncommand="euskalbarOptions();"/>
           <menuseparator/>
-	  <menuitem id="showstatistics" label="&euskalbar.stats.menu;" tooltiptext="&euskalbar.stats.main;" onclick="showLocalstats();"/>
+	  <menuitem id="showstatistics" label="&euskalbar.stats.menu;" tooltiptext="&euskalbar.stats.main;" oncommand="showLocalstats();"/>
         </menupopup>
       </toolbarbutton>
       <toolbarseparator/>
@@ -87,25 +86,38 @@
       <toolbarbutton id="EuskalBar-Opentran" tooltiptext="&euskalbar.opentran.tooltip;" label="Open-tran" oncommand="goEuskalBarOpentran(document.getElementById('EuskalBar-search-string').value);"/>
       <toolbarseparator/>
       <toolbarbutton id="EuskalBar-Euskaltzaindia" tooltiptext="&euskalbar.batua.tooltip;"
-               label="Hiztegi Batua" oncommand="goEuskalBarEuskaltzaindia(document.getElementById('EuskalBar-search-string').value);"/>
+               label="Hiztegi Batua" hidden="false" persist="hidden" oncommand="goEuskalBarEuskaltzaindia(document.getElementById('EuskalBar-search-string').value);"/>
       <toolbarbutton id="EuskalBar-ItzuL" tooltiptext="&euskalbar.itzul.tooltip;"
-               label="ItzuL" oncommand="goEuskalBarItzuL(document.getElementById('EuskalBar-search-string').value);"/>
+               label="ItzuL" hidden="false" persist="hidden" oncommand="goEuskalBarItzuL(document.getElementById('EuskalBar-search-string').value);"/>
       <toolbarbutton id="EuskalBar-Harluxet" tooltiptext="&euskalbar.harluxet.tooltip;"
-               label="Harluxet" oncommand="goEuskalBarHarluxet(document.getElementById('EuskalBar-search-string').value);"/>
+               label="Harluxet" hidden="false" persist="hidden" oncommand="goEuskalBarHarluxet(document.getElementById('EuskalBar-search-string').value);"/>
       <toolbarbutton id="EuskalBar-Mokoroa" tooltiptext="&euskalbar.mokoroa.tooltip;"
-               label="Mokoroa" oncommand="goEuskalBarMokoroa(euskalbar_source, document.getElementById('EuskalBar-search-string').value);"/>
+               label="Mokoroa" hidden="false" persist="hidden" oncommand="goEuskalBarMokoroa(euskalbar_source, document.getElementById('EuskalBar-search-string').value);"/>
       <toolbarbutton id="EuskalBar-ZTCorpusa" tooltiptext="&euskalbar.ztcorpusa.tooltip;"
-               label="ZT Corpusa" oncommand="goEuskalBarZTCorpusa(document.getElementById('EuskalBar-search-string').value);"/>
-      <toolbarbutton id="EuskalBar-ZTCorpusa" tooltiptext="&euskalbar.eurovoc.tooltip;"
-               label="Eurovoc" oncommand="goEuskalBarEurovoc(document.getElementById('EuskalBar-search-string').value);"/>
-      <toolbarseparator/>
+               label="ZT Corpusa" hidden="false" persist="hidden" oncommand="goEuskalBarZTCorpusa(document.getElementById('EuskalBar-search-string').value);"/>
+      <toolbarbutton id="EuskalBar-Eurovoc" tooltiptext="&euskalbar.eurovoc.tooltip;"
+               label="Eurovoc" hidden="false" persist="hidden" oncommand="goEuskalBarEurovoc(document.getElementById('EuskalBar-search-string').value);"/>
       <toolbarbutton id="EuskalBar-XUXENweb" tooltiptext="&euskalbar.xuxenweb.tooltip;"
-               label="XUXENweb" oncommand="goEuskalBarXUXENweb(document.getElementById('EuskalBar-search-string').value);"/>
-      <toolbarseparator/>
+               label="XUXENweb" hidden="false" persist="hidden" oncommand="goEuskalBarXUXENweb(document.getElementById('EuskalBar-search-string').value);"/>
       <toolbarbutton id="EuskalBar-Opentrad" tooltiptext="&euskalbar.opentrad.tooltip;"
-               label="Opentrad" oncommand="goEuskalBarOpentrad(euskalbar_source, document.getElementById('EuskalBar-search-string').value);"/>
+               label="Opentrad" hidden="false" persist="hidden" oncommand="goEuskalBarOpentrad(euskalbar_source, document.getElementById('EuskalBar-search-string').value);"/>
      </toolbar>
   </toolbox>
+
+
+  <!-- Hide/show buttons context menupopup right-click -->
+  <window id="main-window">
+    <menupopup id="Euskalbar-hsButtons">
+      <menuitem id="Euskalbar-hs-batua" type="checkbox" label="Hiztegi Batua" oncommand="document.getElementById('EuskalBar-Euskaltzaindia').hidden = !this.hasAttribute('checked');" checked="true" persist="checked"/>
+      <menuitem id="Euskalbar-hs-itzul" type="checkbox" checked="true" label="ItzuL" oncommand="document.getElementById('EuskalBar-ItzuL').hidden = !this.hasAttribute('checked');"/>
+      <menuitem id="Euskalbar-hs-harluxet" type="checkbox" checked="true" label="Harluxet" oncommand="document.getElementById('EuskalBar-Harluxet').hidden = !this.hasAttribute('checked');"/>
+      <menuitem id="Euskalbar-hs-mokoroa" type="checkbox" checked="true" label="Mokoroa" oncommand="document.getElementById('EuskalBar-Mokoroa').hidden = !this.hasAttribute('checked');"/>
+      <menuitem id="Euskalbar-hs-ztcorpusa" type="checkbox" checked="true" label="ZT Corpusa" oncommand="document.getElementById('EuskalBar-ZTCorpusa').hidden = !this.hasAttribute('checked');"/>
+      <menuitem id="Euskalbar-hs-eurovoc" type="checkbox" checked="true" label="Eurovoc" oncommand="document.getElementById('EuskalBar-Eurovoc').hidden = !this.hasAttribute('checked');"/>
+      <menuitem id="Euskalbar-hs-xuxenweb" type="checkbox" checked="true" label="XUXENweb" oncommand="document.getElementById('EuskalBar-XUXENweb').hidden = !this.hasAttribute('checked');"/>
+      <menuitem id="Euskalbar-hs-opentrad" type="checkbox" checked="true" label="Opentrad" oncommand="document.getElementById('EuskalBar-Opentrad').hidden = !this.hasAttribute('checked');"/>
+    </menupopup>
+  </window>
 
 
   <!-- Firefox context menupopup right-click -->
