@@ -62,6 +62,7 @@
 		  </ul>
 		</li>
         <li><h3>Statistics</h3>Shows a count of searches made with each of the bar dictionaries.</li>
+        <li><h3>Show/hide bar buttons</h3>Richt-clicking in the bar shows a menu to toggle bar buttons.</li>
       </ul>
       <h2>Dictionaries menu</h2>
 
