@@ -64,6 +64,7 @@
           </ul>
 		</li>
         <li><h3>Estadísticas</h3>Muestra un recuento de las búsquedas realizadas con cada uno de los diccionarios de la barra.</li>
+        <li><h3>Mostrar/esconder los botones de la barra</h3>Pulsando con el botón derecho sobre la barra, existe la posibilidad de mostrar o esconder algunos de los diccionarios.</li>
       </ul>
       <h2>Menú de diccionarios</h2>
       Esta opci&oacute;n&nbsp;permite acceder directamente al sitio web de diversos diccionarios y recursos del euskara.<br>
