@@ -28,9 +28,9 @@ berean.</li>
         <li><h3>Saguaren eskuineko botoia sakatuz</h3>Web orrialde bateko testua hautatu, saguaren eskuineko botoia sakatu eta kontsultatu nahi den hiztegia aukeratuz "Euskalbar" menuan.</li>
       </ul>
       <h2>Aukerak</h2>
-Atal honetan ondoko aukera hauek alda daitezke:
+Atal honetan ondoko aukera hauek daude:
       <ul>
-        <li><h3>Erakutsi/ezkutatu hiztegien menua</h3>Hiztegien menua erakusten/ezkutatzen du  "Tresnak" eta "Laguntza" menuen artean, Firefoxen menu barra
+        <li><h3>Erakutsi/ezkutatu hiztegien menua</h3>Hiztegien menua erakusten/ezkutatzen du "Tresnak" eta "Laguntza" menuen artean, Firefoxen menu barra
 nagusian.</li>
         <li><h3>Hobespenak...</h3>
 		  <ul>
@@ -52,6 +52,7 @@ nagusian.</li>
 		  </ul>
 		</li>
         <li><h3>Estatistikak</h3>Barrako hiztegi bakoitzarekin egin den bilaketa kopurua erakusten du.</li>
+        <li><h3>Erakutsi/ezkutatu barrako botoiak</h3>Saguaren eskuineko botoiarekin barraren gainean sakatuz, bertako zenbait botoi erakutsi edo ezkutatzeko aukera dago.</li>
       </ul>
       <h2>Hiztegien menua</h2>
 Aukera honek euskarazko hainbat hiztegi eta baliabideren webguneetara zuzenean sartzeko aukera
