@@ -4,6 +4,7 @@
 
 2.2 bertsioa
 ================
+- Barrako zenbait hiztegi erakutsi eta ezkutatzeko aukera sortu da. (#6)
 - Azalak sortu dira. (#14)
 - Estatistika lokalak sortu dira. (#4)
 - 3000ren azpisarrerak kontsultatzean zegoen arazoa konpondu da. (#18)
